﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-10-13 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * lang/*: typo 'unser' -> 'user'
    
2005-10-13 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_addfield.php: undefined $field_collation under MySQL 4.0.x

2005-10-13 Michal Čihař  <michal@cihar.com>
    * Documentation.html: Fix URL rewriting not to match empty parts.
    * calendar.php, themes.php, libraries/auth/config.auth.lib.php,
      libraries/auth/cookie.auth.lib.php, libraries/auth/http.auth.lib.php:
      Use common header.
    * libraries/header_meta_style.inc.php: Add support for defining page
      title.
    * libraries/left.js, libraries/header_meta_style.inc.php: Move browser
      detection to only place where it is currently used.
    * header.inc.php, css/phpmyadmin.css.php: Define CSS normal way and not
      by writing through JavaScript.
    * libraries/get_foreign.lib.php: Free temporary query result.
    * lang/czech: Improve some translations.
    * sql.php: We need bookmark code to be included everytime.
    * libraries/common.lib.php: Allow editing of query without database.

2005-10-13 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * left.php: preselect db if only one db
    * server_privileges.php:
      XHTML compl., NOTICE, Icons for Edit/Revoke Links
    * server_processlist.php, libraries/display_import.lib.php,
      css/phpmyadmin.css.php: XHTML compl.
    * libraries/display_import.lib.php, css/phpmyadmin.css.php:
      JavaScript errors, layout errors
    * libraries/display_import.lib.php, css/phpmyadmin.css.php:
      small CSS fixes
    * libraries/display_export.lib.php, server_export.php:
      XHTML compliance, introduced fieldsets

2005-10-12 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * css/phpmyadmin.css.php, libraries/common.lib.php,
      themes/darkblue_orange/css/theme_right.css.php,
      themes/original/css/theme_right.css.php: