@@ -5,6 +5,10 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2005-10-14 Michal Čihař  <michal@cihar.com>
+    * libraries/sql_query_form.lib.php: Do not attempt to read upload dir when
+      not configured.
+
 2005-10-13 Sebastian Mendel <cybot_tm@users.sourceforge.net>
     * lang/*: typo 'unser' -> 'user'
     
